# dissonance

./: .gitignore  delete.py  delete_debugln.py  pyproject.toml  readme.md  requirements.txt  setup.py
data/: mystyle.mplstyle  rstarrmap.txt
dissonance/: __init__.py  __main__.py  logger.py
dissonance/analysis/: __init__.py  analysistree.py  baseanalysis.py  browsing.py
dissonance/analysis_functions/: __init__.py  filter_peaky_things.py  hill.py  linear_nonlinear_model.py  liner_filter_finder.py  passfilters.py  psth.py  spike_detection.py  spike_detetection_symphony.py  weber.py
dissonance/blocks/: blocks.py
dissonance/epochtypes/: __init__.py  adaptingsteps.py  base_spike_epoch.py  base_whole_epoch.py  baseepoch.py  chirpepoch.py  epochfactory.py  expandingspots.py  ledmultiplewavepulse.py  ledpairedpulsefamily.py  ledpairedsinewavepulse.py  ledpairedsquarewavepulse.py  ledpulse.py  ledpulsefamily.py  noiseepoch.py  ns_epochtypes.py  sacaadeepoch.py  spikeepoch.py  wholeepoch.py
dissonance/funks/: __init__.py  hill.py  liner_filter_finder.py  spike_detection.py  weber.py
dissonance/io/: Cell.py  __init__.py  dissonanceio.py  processes.py  utils.py
dissonance/stimulus/: __init__.py  chirpstimulusled.py  lednoisefamily.py  matlab_random_numbers.py  stimulus_generator.py
dissonance/viewer/: __init__.py  app.py  epochtree.py  (+4 more)
examples/: simpleui.py
scripts/: browsing.py  change_protocolname.py  filter_whole_spikes.py  update_all_epoch_names.py
tests/: constants.py  test_add_info.py  test_io.py  test_peak_amplitude.py  test_ui.py  unchecked.csv
(+24 files in other folders)
