[tool.poetry]
name = "dissonance"
version = "0.1.0"
description = ""
authors = ["Joe Farchione"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
plotly = "^5.20.0"
matplotlib = "^3.8.3"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
h5py = "^3.10.0"
tables = "^3.9.2"
click = "^8.1.7"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

